--- a/PSS/PSS/Pages/Starred.razor
+++ b/PSS/PSS/Pages/Starred.razor
@@ -27,15 +27,7 @@
 }
 
 @code {
-    private static LibraryContentViewer libContentViewer = new();
-    private static int selectedItemsCount;
-    
-    private static string headerVis;
-    private static string collectionsVis;
-
-    protected override void OnInitialized()
-    {
-        selectedItemsCount = 0;
-        headerVis = collectionsVis = "hidden";
-    }
+    private LibraryContentViewer libContentViewer = new();
+    private int selectedItemsCount;
+    private string headerVis = "hidden", collectionsVis = "hidden";
 }
