Remove static from Missing Files and Untracked Files

--- a/PSS/PSS/Pages/Maintenance/MissingFiles.razor
+++ b/PSS/PSS/Pages/Maintenance/MissingFiles.razor
@@ -29,11 +29,11 @@
 </div>
 
 @code{
-    private static List<MediaRow> mediaMissingItems;
+    private List<MediaRow> mediaMissingItems;
 
     protected override void OnInitialized() => mediaMissingItems = M.GetMediaMissingFiles();
 
-    private static void DeleteMissingPaths()
+    private void DeleteMissingPaths()
     {
         M.RemoveMediaMissingFiles(mediaMissingItems);
         mediaMissingItems.Clear();
