More misc. minor cleanup

--- a/PSS/PSS/Shared/CtrlGInput.razor
+++ b/PSS/PSS/Shared/CtrlGInput.razor
@@ -19,12 +19,6 @@
 	[Parameter, EditorRequired]
 	public Action StartDateChanged { get; set; }
 	
-	public DateTime NewStartDate { get; private set; }
-	private string ctrlGVis;
-
-	protected override void OnInitialized()
-	{
-		NewStartDate = DateTime.Today;
-		ctrlGVis = "hidden";
-	}
+	public DateTime NewStartDate { get; private set; } = DateTime.Today;
+	private string ctrlGVis = "hidden";
 }
