--- a/PSS/PSS/Shared/ShortcutsReference.razor
+++ b/PSS/PSS/Shared/ShortcutsReference.razor
@@ -131,7 +131,7 @@
 <KeyboardShortcuts CtrlSlash="@(() => { F.VisToggle(ref visibility); StateHasChanged(); })"/>
 
 @code {
-    private static string visibility;
+    private string visibility = "hidden";
     
     [Parameter]
     public string IText { get; set; }
@@ -174,6 +174,4 @@
 	
     [Parameter]
     public string AltRightText { get; set; }
-    
-    protected override void OnInitialized() => visibility = "hidden";
 }
