Make CollectionView's collection name text input 600 px wide

--- a/PSS/PSS/wwwroot/css/CollectionView.css
+++ b/PSS/PSS/wwwroot/css/CollectionView.css
@@ -82,7 +82,7 @@ header > #collectionRenameDiv {
     border: 2px solid black;
     outline: none;
     font-size: 20px;
-    width: 50%;
+    width: 600px;
 }
 
 #collectionRenameDiv > .material-icons-outlined {
