Remove FontSize attribute from Backups' ProgressPopUp

--- a/PSS/PSS/Pages/Maintenance/Backups.razor
+++ b/PSS/PSS/Pages/Maintenance/Backups.razor
@@ -31,7 +31,7 @@
         }
     </div>
     
-    <ProgressPopUp Message="@popUpMsg" FontSize="22" Visible="@popUpVis"/>
+    <ProgressPopUp Message="@popUpMsg" Visible="@popUpVis"/>
 }
 
 @code{
