Remove Height and Width from Import's ProgressPopUp

--- a/PSS/PSS/Pages/Import.razor
+++ b/PSS/PSS/Pages/Import.razor
@@ -154,7 +154,7 @@
 	</div>
 }
 
-<ProgressPopUp Height="200" Width="200" Message="@popUpMsg" Visible="@addingItems"/>
+<ProgressPopUp Message="@popUpMsg" Visible="@addingItems"/>
 
 @code {
 	private static ElementReference searchInput;
