--- a/PSS/PSS/Pages/CollectionsMain.razor
+++ b/PSS/PSS/Pages/CollectionsMain.razor
@@ -62,8 +62,8 @@
     private CollectionCreator collectionCreator;
     
     private string sortBtnText, sortDivVis = "hidden";
-    private CMSortMode mode = CMSortMode.LastModified;
-    private bool showAlbums = true, showFolders, showReadonly = true;
+    private static CMSortMode mode = CMSortMode.LastModified;
+    private static bool showAlbums = true, showFolders, showReadonly = true;
 
     protected override void OnInitialized()
     {
