Replace instances of 'video thumbnail' with just 'thumbnail'

--- a/PSS/PSS/Pages/Settings.razor
+++ b/PSS/PSS/Pages/Settings.razor
@@ -43,7 +43,7 @@
         
         <div id="thumbnail-settings">
             <div id="thumbnail-slider">
-                <span title="Lower the number, higher the quality.">Video Thumbnail Quality: @thumbnailQuality</span>
+                <span title="Lower the number, higher the quality.">Thumbnail Quality: @thumbnailQuality</span>
                 <input type="range" step="1" min="1" max="31" @bind="@thumbnailQuality" @bind:event="oninput" title="Lower the number, higher the quality."/>
             </div>
             <div id="thumbnail-updating">
