Fix namespaces and whitespace that was spaces instead of tabs

--- a/MemoryMosaic/Pages/_Host.cshtml
+++ b/MemoryMosaic/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 @page "/"
-@namespace PSS.Pages
+@namespace MemoryMosaic
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
@@ -20,4 +20,3 @@
     <div id="components-reconnect-modal"></div> @*https://stackoverflow.com/a/59395390*@
 </body>
 </html>
-
